--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <title>Game Project Shell</title>
     <script type="text/javascript" src="./gameengine.js"></script>
+    <script type="text/javascript" src="./animation.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./kaynine.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
