--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./animation.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./floor.js"></script>
     <script type="text/javascript" src="./kaynine.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
