--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./floor.js"></script>
+    <script type="text/javascript" src="./spike.js"></script>
     <script type="text/javascript" src="./kaynine.js"></script>
     <script type="text/javascript" scr="./temp.js"></script>
     <script type="text/javascript" src="./main.js"></script>
