--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./animation.js"></script>
     <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./floor.js"></script>
     <script type="text/javascript" src="./spike.js"></script>
