Updated the html file with turret and lazer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./lazer.js"></script>
+    <script type="text/javascript" src="./turret.js"></script>
     <script type="text/javascript" src="./floor.js"></script>
     <script type="text/javascript" src="./spike.js"></script>
     <script type="text/javascript" src="./kaynine.js"></script>
