--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
     <script type="text/javascript" src="./lazer.js"></script>
+    <script type="text/javascript" src="./goal.js"></script>
     <script type="text/javascript" src="./turret.js"></script>
     <script type="text/javascript" src="./floor.js"></script>
     <script type="text/javascript" src="./spike.js"></script>
