Spike causing a crash right now, fixing before next commit.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="./kaynine.js"></script>
     <script type="text/javascript" scr="./temp.js"></script>
     <script type="text/javascript" scr="./levels.js"></script>
-    <script type="text/javascript" src="./levelbuilder.js"></script>
+    <script type="text/javascript" src="./levelmanager.js"></script>
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
