--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./assetmanager.js"></script>
     <script type="text/javascript" src="./boundingbox.js"></script>
     <script type="text/javascript" src="./background.js"></script>
+    <script type="text/javascript" src="./camera.js"></script>
     <script type="text/javascript" src="./lazer.js"></script>
     <script type="text/javascript" src="./goal.js"></script>
     <script type="text/javascript" src="./turret.js"></script>
