"Made a first level and a quick win screen"

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
-    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: lightskyblue"></canvas>
-    <p>This is just a demo of what's hopefully going to happen. WASD movement with space for jump.
-There are some invisible walls at the edge of the screen (the gap is on purpose). They should stop your movement left and right and if you jump onto them you slide down if pressing into the wall. Using W & S on the wall will climb you up and down.
-
-For some reason the wall animations don't want to work right now and we don't have an idle animation, but all our current original art is playing in the top left.</p>
+    <canvas id="gameWorld" tabindex="1" width="1280" height="700" style="border: 1px solid brown; background: lightskyblue"></canvas>
+    <p>WASD movement with space for jump.</p>
 </body>
 </html>
