--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="./camera.js"></script>
     <script type="text/javascript" src="./floor.js"></script>
     <script type="text/javascript" src="./lazer.js"></script>
+	<script type="text/javascript" src="./vacuum.js"></script>
     <script type="text/javascript" src="./goal.js"></script>
     <script type="text/javascript" src="./turret.js"></script>
     <script type="text/javascript" src="./spike.js"></script>
